--- a/index.html
+++ b/index.html
@@ -206,7 +206,9 @@ limparBtn.addEventListener('click', ()=>{
   produtosUnidos=[];
   grid.innerHTML='';
   setProgress('');
+  <link rel="icon" href="abelha.png" type="image/png">
 });
 </script>
 </body>
 </html>
+
